--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: 'manifest.gradle'
     repositories {
         google()
         jcenter()
@@ -21,13 +22,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-def gitCommitCount = Integer.parseInt('git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
-
-ext {
-    minSdkVersion = 23
-    targetSdkVersion = 30
-    versionCode = gitCommitCount
-    versionName = "11.0"
 }
