--- a/api/build.gradle
+++ b/api/build.gradle
@@ -21,7 +21,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+}
+
+dependencies {
+    implementation project(':aidl')
+    implementation project(':shared')
+
+    implementation "androidx.annotation:annotation:1.1.0"
 }
