--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -3,36 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="rikka.shizuku.demo">
 
+    <!-- This permission is required by Shizuku pre-v11, remove if your app is new or only supports Sui -->
+    <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
+
     <application
-        android:name=".SampleApplication"
+        android:name=".DemoApplication"
         android:allowBackup="false"
+        android:extractNativeLibs="true"
         android:label="Demo for Shizuku &amp; Sui"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault"
-        android:extractNativeLibs="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".AnotherProcessActivity">
+        <activity android:name=".DemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name=".SampleActivity"
-            android:process=":test">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>-->
 
-        <!--<provider
-            android:name=".ShizukuProvider"
+        <!-- This provider is required by Shizuku, remove this if your app only supports Sui -->
+        <provider
+            android:name="rikka.shizuku.ShizukuProvider"
             android:authorities="${applicationId}.shizuku"
             android:enabled="true"
             android:exported="true"
             android:multiprocess="false"
-            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL"
-            android:process=":test" />-->
+            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
     </application>
 
 </manifest>
