--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':aidl', ':shared', ':api'
+include ':aidl', ':shared', ':api', ':provider'
 include ':demo', ':demo-hidden-api-stub'
 rootProject.name = "Shizuku-API"
