--- a/api/build.gradle
+++ b/api/build.gradle
@@ -32,3 +32,13 @@ dependencies {
 
     implementation "androidx.annotation:annotation:1.1.0"
 }
+
+project.ext {
+    mavProjectName = 'rikka.shizuku:api'
+    mavLibraryDescription = 'The API for Sui.'
+}
+
+group = 'rikka.shizuku'
+version = android.defaultConfig.versionName
+
+apply from: rootProject.file('publish.gradle')
