--- a/manifest.gradle
+++ b/manifest.gradle
@@ -4,5 +4,6 @@ ext {
     api_version_code = 1
     api_version_major = 11
     api_version_minor = 0
-    api_version_name = "${api_version_major}.${api_version_minor}"
+    api_version_path = 0
+    api_version_name = "${api_version_major}.${api_version_minor}.${api_version_path}"
 }
