Move gradle-maven-publish-plugin props to gradle files

--- a/aidl/build.gradle
+++ b/aidl/build.gradle
@@ -28,3 +28,8 @@ android {
 }
 
 version = android.defaultConfig.versionName
+
+ext {
+    POM_NAME = "Shizuku API - aidl"
+    POM_DESCRIPTION = "Low level aidl of Shizuku and Sui."
+}
