--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -31,3 +31,8 @@ dependencies {
 }
 
 version = android.defaultConfig.versionName
+
+ext {
+    POM_NAME = "Shizuku API - shared"
+    POM_DESCRIPTION = "Shared parts for the API of Shizuku and Sui."
+}
