--- a/provider/build.gradle
+++ b/provider/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id('com.android.library')
-    id('com.vanniktech.maven.publish')
 }
 
 android {
@@ -33,6 +32,7 @@ dependencies {
 }
 
 ext {
+    publishLibrary = true
     POM_NAME = "Shizuku API - provider"
     POM_DESCRIPTION = "Content Provider for Shizuku."
 }
