Rename bsh to rish since BeanShell uses this name
"Rish" stands for "Rish is an Interactive SHell for android" :D

--- a/rish/build.gradle
+++ b/rish/build.gradle
@@ -45,6 +45,6 @@ dependencies {
 
 ext {
     publishLibrary = true
-    POM_NAME = "BSH"
-    POM_DESCRIPTION = "BSH"
+    POM_NAME = "RISH"
+    POM_DESCRIPTION = "RISH"
 }
