--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':aidl', ':shared', ':api', ':provider', ':rish'
 include ':demo', ':demo-hidden-api-stub'
-rootProject.name = "Shizuku-API"
+include ':server-shared'
+include ':hidden-api-stub'
