Use dev.rikka.tools.refine 2.0.0

--- a/hidden-api-stub/build.gradle
+++ b/hidden-api-stub/build.gradle
@@ -24,5 +24,7 @@ android {
 }
 
 dependencies {
+    implementation("dev.rikka.tools.refine:annotation:2.0.0")
+
     implementation "androidx.annotation:annotation:1.2.0"
 }
