--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.application'
+plugins {
+    id('com.android.application')
+    id('dev.rikka.tools.refine.gradle-plugin')
+}
 
 android {
     compileSdkVersion api_target_sdk
