--- a/server-shared/build.gradle
+++ b/server-shared/build.gradle
@@ -23,7 +23,8 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "androidx.annotation:annotation:1.2.0"
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.core:core:1.7.0'
     implementation 'dev.rikka.rikkax.parcelablelist:parcelablelist:1.0.0'
 
     api project(':aidl')
