--- a/server-shared/build.gradle
+++ b/server-shared/build.gradle
@@ -22,7 +22,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.core:core:1.7.0'
     implementation 'dev.rikka.rikkax.parcelablelist:parcelablelist:1.0.0'
@@ -31,6 +30,7 @@ dependencies {
     api project(':shared')
     api project(':rish')
 
-    implementation("dev.rikka.tools.refine:runtime:2.0.0")
-    compileOnly project(':hidden-api-stub')
+    implementation 'dev.rikka.tools.refine:runtime:3.0.3'
+    implementation 'dev.rikka.hidden:compat:1.0.0'
+    compileOnly 'dev.rikka.hidden:stub:1.0.0'
 }
