--- a/api/build.gradle
+++ b/api/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     api project(':aidl')
     api project(':shared')
 
-    implementation "androidx.annotation:annotation:1.2.0"
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
 
 ext {
