--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -45,11 +45,11 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:1.2.0"
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     implementation project(':api') // required by Shizuku and Sui
     implementation project(':provider') // required by Shizuku only
 
     compileOnly project(':demo-hidden-api-stub')
-    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:2.0' // bypass hidden api restriction, https://github.com/LSPosed/AndroidHiddenApiBypass
+    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:4.3' // bypass hidden api restriction, https://github.com/LSPosed/AndroidHiddenApiBypass
 }
