--- a/rish/build.gradle
+++ b/rish/build.gradle
@@ -37,7 +37,7 @@ android {
 dependencies {
     implementation project(':api')
 
-    implementation "androidx.annotation:annotation:1.2.0"
+    implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'dev.rikka.ndk.thirdparty:cxx:1.1.0'
 }
 
