--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id('com.android.application')
-    id('dev.rikka.tools.refine.gradle-plugin')
+    id('dev.rikka.tools.refine')
 }
 
 android {
