--- a/api/build.gradle
+++ b/api/build.gradle
@@ -19,6 +19,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -28,6 +29,7 @@ dependencies {
     api project(':aidl')
     api project(':shared')
 
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
     implementation 'androidx.annotation:annotation:1.3.0'
 }
 
