--- a/api/build.gradle
+++ b/api/build.gradle
@@ -13,13 +13,15 @@ android {
         buildConfig false
     }
     buildTypes {
+        debug {
+            defaultConfig.minSdkVersion 24
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -29,7 +31,6 @@ dependencies {
     api project(':aidl')
     api project(':shared')
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
     implementation 'androidx.annotation:annotation:1.3.0'
 }
 
