--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     apply from: 'manifest.gradle'
-
     ext.kotlinVersion = '1.7.10'
-    repositories {
-        mavenCentral()
-        google()
-        maven { url 'https://jitpack.io' }
+}
 
-        // In case newly published library not yet synced with maven central
-        maven {
-            url("https://s01.oss.sonatype.org/content/repositories/releases/")
-            content {
-                includeGroup("dev.rikka.tools.refine")
-            }
-        }
-        mavenLocal()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-
-        classpath 'dev.rikka.tools.refine:gradle-plugin:3.1.1'
-    }
+plugins {
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    alias libs.plugins.refine apply false
 }
 
 allprojects {
-    repositories {
-        mavenCentral()
-        google()
-
-        // In case newly published library not yet synced with maven central
-        maven {
-            url("https://s01.oss.sonatype.org/content/repositories/releases/")
-            content {
-                includeGroupByRegex("dev.rikka.*")
-            }
-        }
-        mavenLocal()
-    }
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
     }
