--- a/server-shared/build.gradle
+++ b/server-shared/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     api project(':shared')
     api project(':rish')
 
-    implementation 'dev.rikka.tools.refine:runtime:3.1.1'
-    implementation 'dev.rikka.hidden:compat:3.4.3'
-    compileOnly 'dev.rikka.hidden:stub:3.4.3'
+    implementation libs.refine.runtime
+    implementation libs.hidden.compat
+    compileOnly libs.hidden.stub
 }
