--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+    namespace 'rikka.shizuku.api'
     compileSdkVersion api_target_sdk
     defaultConfig {
         minSdkVersion api_min_sdk
