--- a/provider/build.gradle
+++ b/provider/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+    namespace 'rikka.shizuku.provider'
     compileSdkVersion api_target_sdk
     defaultConfig {
         minSdkVersion api_min_sdk
