--- a/aidl/build.gradle
+++ b/aidl/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'rikka.shizuku.aidl'
-    compileSdkVersion api_target_sdk
+    compileSdk api_target_sdk
     defaultConfig {
         minSdkVersion api_min_sdk
         targetSdkVersion api_target_sdk
@@ -12,6 +12,7 @@ android {
     }
     buildFeatures {
         buildConfig false
+        aidl true
     }
     buildTypes {
         release {
