--- a/rish/build.gradle
+++ b/rish/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'rikka.rish'
-    compileSdkVersion api_target_sdk
+    compileSdk api_target_sdk
     defaultConfig {
         minSdkVersion api_min_sdk
         targetSdkVersion api_target_sdk
